links fixed with word wrap

--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
   font-family: 'Montserrat', Arial, Helvetica, sans-serif;
 }
 
+a{
+  word-wrap: break-word;
+}
+
 ul {
   padding: 0;
 }
